==> tac5551/LovyanGFX/src/lgfx/v1/platforms/rp2040/common.cpp <==
#include "common.hpp"
#include <array>
#include <unordered_map>
#include <hardware/structs/resets.h>
#include <hardware/structs/padsbank0.h>
#include <hardware/structs/sio.h>
#include <hardware/structs/iobank0.h>
#include <hardware/sync.h>
#include <hardware/resets.h>
#include <hardware/clocks.h>
#include <hardware/gpio.h>
#include <hardware/spi.h>
#include <hardware/i2c.h>
  #define gpio_function_t enum gpio_function
  #define io_bank0_hw_t iobank0_hw_t
#include <DebugUtil.hpp>
#define DBGPRINT(fmt, ...)
#define DBG_ENTER()
#define DBGPRINTFUNC(fmt, ...)
#define put_dump_byte(data, addr, length)

  void pinMode(int_fast16_t pin, pin_mode_t mode)
  {
    if (pin < 0 || pin >= static_cast<int_fast16_t>(NUM_BANK0_GPIOS))
    {
      return;
    }
    lgfx_gpio_init(pin);
    lgfx_gpio_mode(pin, mode);
    lgfx_gpio_set_dir(pin, mode == pin_mode_t::output);
  }

    uint32_t FreqToClockDiv(uint32_t hz)
    {
      uint32_t fapb = clock_get_hz(clk_peri) >> 1;
      if (fapb <= hz) return 0;
      uint32_t div_num = fapb / (1 + hz);
      if (div_num > 255) div_num = 255;
      return div_num;
    }

    cpp::result<void, error_t> init(int spi_port, int pin_sclk, int pin_miso, int pin_mosi)
    {
      DBGPRINT("enter %s\n", __func__);
      if (spi_port < 0 || spi_port >= n_spi)
      {
        return cpp::fail(error_t::invalid_arg);
      }
      // DBGPRINT("ref_count %d\n", spi_info[spi_port].ref_count); 
      if (spi_info[spi_port].ref_count == 0)
      {
        const spi_pinlist_str pinlist = spi_pinlist[spi_port];
        if (!lgfx::v1::rp2040::pin_check(pin_sclk, pinlist.sclk_pinlist))
        {
          return cpp::fail(error_t::invalid_arg);
        }
        // pin_misoは未使用(-1)でもOKとする
        if (pin_miso != -1 && !lgfx::v1::rp2040::pin_check(pin_miso, pinlist.miso_pinlist))
        {
          return cpp::fail(error_t::invalid_arg);
        }
        // pin_mosiは未使用(-1)でもOKとする
        if (pin_mosi != -1 && !lgfx::v1::rp2040::pin_check(pin_mosi, pinlist.mosi_pinlist))
        {
          return cpp::fail(error_t::invalid_arg);
        }
        lgfx_spi_set_pin_function(pin_mosi, pin_miso, pin_sclk);
        spi_info[spi_port].pin_sclk = pin_sclk;
        spi_info[spi_port].pin_miso = pin_miso;
        spi_info[spi_port].pin_mosi = pin_mosi;
        if (!lgfx_spi_init(spi_dev[spi_port]))
        {
          return cpp::fail(error_t::invalid_arg);
        }
        spi_info[spi_port].ref_count = 1;
        DBGPRINT("return %s\n", __func__);
        return {};
      }
      // 
      if (spi_info[spi_port].pin_sclk != pin_sclk)
      {
        return cpp::fail(error_t::invalid_arg);
      }
      //
      auto rc = check_pin_update(spi_info[spi_port].pin_miso, pin_miso);
      auto result_miso = rc.first;
      auto need_update_miso = rc.second;
      if (result_miso.has_error())
      {
        return result_miso;
      }
      if (need_update_miso)
      {
        spi_info[spi_port].pin_miso = pin_miso;
      }
      //
      rc = check_pin_update(spi_info[spi_port].pin_mosi, pin_mosi);
      auto result_mosi = rc.first;
      auto need_update_mosi = rc.second;
      if (result_mosi.has_error())
      {
        return result_mosi;
      }
      if (need_update_mosi)
      {
        spi_info[spi_port].pin_mosi = pin_mosi;
      }
      if (need_update_miso || need_update_mosi)
      {
        lgfx_spi_set_pin_function(spi_info[spi_port].pin_mosi,
          spi_info[spi_port].pin_miso, spi_info[spi_port].pin_sclk);
      }
      spi_info[spi_port].ref_count++;
      DBGPRINT("return %s\n", __func__);
      return {};
    }

    void release(int spi_port)
    {
      if (spi_info[spi_port].ref_count == 0)
      {
        return;
      }
      spi_info[spi_port].ref_count--;
      if (spi_info[spi_port].ref_count == 0)
      {
        spi_info[spi_port].pin_sclk = -1;
        spi_info[spi_port].pin_miso = -1;
        spi_info[spi_port].pin_mosi = -1;
        lgfx_spi_deinit(spi_dev[spi_port]);
      }
    }

    void beginTransaction(int spi_port, uint32_t freq, int spi_mode)
    {
      static constexpr spi_cpha_t cpha_table[] = { SPI_CPHA_0, SPI_CPHA_1, SPI_CPHA_0, SPI_CPHA_1 };
      static constexpr spi_cpol_t cpol_table[] = { SPI_CPOL_0, SPI_CPOL_0, SPI_CPOL_1, SPI_CPOL_1 };
      if (spi_mode < 0 || spi_mode > 3)
      {
        spi_mode = 0;
      }
      lgfx_spi_set_format(spi_dev[spi_port], 8, cpol_table[spi_mode], cpha_table[spi_mode], SPI_MSB_FIRST);
      lgfx_spi_set_baudrate(spi_dev[spi_port], freq);
    }

    void endTransaction([[maybe_unused]]int spi_port)
    {

    }

    cpp::result<void, error_t> init(int i2c_port, int pin_sda, int pin_scl)
    {
      volatile i2c_hw_t *const i2c_regs = i2c_dev[i2c_port];
      auto info = &i2c_info[i2c_port];
      if (i2c_port < 0 || i2c_port >= n_i2c)
      {
        DBGPRINT("invalid port number %d\n", i2c_port);
        return cpp::fail(error_t::invalid_arg);
      }
      if (info->ref_count == 0)
      {
        const struct i2c_pinlist_str pinlist = i2c_pinlist[i2c_port];
        if (!lgfx::v1::rp2040::pin_check(pin_sda, pinlist.sda_pinlist))
        {
          DBGPRINT("invalid sda %d\n", pin_sda);
          return cpp::fail(error_t::invalid_arg);
        }
        if (!lgfx::v1::rp2040::pin_check(pin_scl, pinlist.scl_pinlist))
        {
          DBGPRINT("invalid scl %d\n", pin_scl);
          return cpp::fail(error_t::invalid_arg);
        }
        lgfx_gpio_set_function(pin_sda, GPIO_FUNC_I2C);
        lgfx_gpio_set_function(pin_scl, GPIO_FUNC_I2C);
        lgfx_i2c_init(i2c_regs);
        info->pin_sda = pin_sda;
        info->pin_scl = pin_scl;
        info->ref_count = 1;
        return {};
      }
      if (i2c_info[i2c_port].pin_sda != pin_sda)
      {
        return cpp::fail(error_t::invalid_arg);
      }
      if (info->pin_scl != pin_scl)
      {
        return cpp::fail(error_t::invalid_arg);
      }
      info->ref_count++;
      return {};
    }

    cpp::result<void, error_t> release(int i2c_port)
    {
      volatile i2c_hw_t * const i2c_regs = i2c_dev[i2c_port];
      auto info = &i2c_info[i2c_port];
      
      if (info->ref_count == 0)
      {
        return {};
      }
      info->ref_count--;
      if (info->ref_count == 0)
      {
        info->pin_sda = -1;
        info->pin_scl = -1;
        lgfx_i2c_deinit(i2c_regs);
      }
      return {};
    }

    cpp::result<void, error_t> restart(int i2c_port, int i2c_addr, uint32_t freq, [[maybe_unused]] bool read)
    {
      volatile i2c_hw_t *const i2c_regs = i2c_dev[i2c_port];
      DBG_ENTER();
      // readで読み出しが行われない可能性があるので、stop conditionに遷移する
      if (!send_last_byte(i2c_port, stop_state_t::stop , need_wait_t::wait)) {
        return cpp::fail(error_t::connection_lost);
      }
      if (!lgfx_i2c_set_baudrate(i2c_regs, freq)) {
        return cpp::fail(error_t::connection_lost);
      }
      set_target_address(i2c_regs, i2c_addr);
      return {};
    }

    cpp::result<void, error_t> beginTransaction(int i2c_port, int i2c_addr, uint32_t freq, [[maybe_unused]] bool read)
    {
      volatile i2c_hw_t *const i2c_regs = i2c_dev[i2c_port];
      auto info = &i2c_info[i2c_port];
      DBG_ENTER();
      if (!lgfx_i2c_set_baudrate(i2c_regs, freq)) {
        return cpp::fail(error_t::connection_lost);
      }
      set_target_address(i2c_regs, i2c_addr);
      uint32_t clk_per_ms = clock_get_hz(clk_sys) / 1000;
      info->timeout_count = clk_per_ms * i2c_timeout;;
      info->last_byte_valid = false;
      info->restart = restart_state_t::none;
      return {};
    }

    cpp::result<void, error_t> endTransaction(int i2c_port)
    {
      DBG_ENTER();
      // 未送信の最終データをstop conditionで送信
      if (!send_last_byte(i2c_port, stop_state_t::stop, need_wait_t::wait)) {
        return cpp::fail(error_t::connection_lost);
      }
      return {};
    }

    cpp::result<void, error_t> writeBytes(int i2c_port, const uint8_t *data, size_t length)
    {
      DBGPRINTFUNC("%d\n", length);
      if (length == 0) {
        return {};
      }
      if (!send_last_byte(i2c_port, stop_state_t::none, need_wait_t::none)) {
        DBGPRINTFUNC("send_last_byte() failed\n");
        return cpp::fail(error_t::connection_lost);
      }
      auto last_data_index = length - 1;
      for (decltype(length) i = 0; i < last_data_index; i++) {
        bool rc = send_byte_blocking(i2c_port, *data++, stop_state_t::none);
        if (!rc) {
          DBGPRINTFUNC("send_byte_blocking() failed\n");
          return cpp::fail(error_t::connection_lost);
        }
      }
      set_last_byte(i2c_port, *data);
      put_dump_byte(data, 0, length);
      return {};
    }

    cpp::result<void, error_t> readBytes(int i2c_port, uint8_t *data, size_t length, bool last_nack = false)
    {
      volatile i2c_hw_t *const i2c_regs = i2c_dev[i2c_port];
      auto info = &i2c_info[i2c_port];
      if (length == 0) {
        return {};
      }
      for (decltype(length) i = 0; i < length; i++) {
        prepare_recv(i2c_regs, (i == 0) && info->restart == restart_state_t::restart, (i == length - 1));
        bool rc = wait_for_rxfifo_not_empty(i2c_port);
        if (!rc) {
          DBGPRINTFUNC("timeout %04x %02x %d\n", i2c_regs->status, i2c_regs->rxflr, is_rx_fifo_not_empty(i2c_regs));
          return cpp::fail(error_t::connection_lost);
        }
        *data++ = recv_data(i2c_regs);
      }
      info->restart = restart_state_t::none;
      DBGPRINTFUNC("%d\n", length);
      put_dump_byte(data, 0, length);
      return {};
    }
